deploy: 267df5154886f97ca490519ddf84832b458aa1b7

--- a/sector/Grid-class.html
+++ b/sector/Grid-class.html
@@ -130,6 +130,7 @@ that are derived from other methods.</p>
           <dt>Implementers</dt>
           <dd><ul class="comma-separated clazz-relationships">
               <li><a href="../sector/ListGrid-class.html">ListGrid</a></li>
+              <li><a href="../sector/SplayTreeGrid-class.html">SplayTreeGrid</a></li>
               <li><a href="../sector/UnmodifiableGridView-class.html">UnmodifiableGridView</a></li>
           </ul></dd>
 
