--- a/sector/GridExtension.html
+++ b/sector/GridExtension.html
@@ -61,7 +61,7 @@
 
     
 <section class="desc markdown">
-  <p>Additional convenience methods that are derived from the <a href="../sector/Grid-class.html">Grid</a> interface.</p>
+  <p>Additional convenience methods that are derived from <a href="../sector/Grid-class.html">Grid</a>.</p>
 <p>Methods are added here, instead of on the <a href="../sector/Grid-class.html">Grid</a> interface when they are
 purely derived from the existing methods on the interface, and don't have
 perceived value in specialization for specific implementations.</p>
