--- a/sector/ListGrid/ListGrid.empty.html
+++ b/sector/ListGrid/ListGrid.empty.html
@@ -68,7 +68,8 @@
     
 <section class="desc markdown">
   <p>Creates a new empty grid.</p>
-<p>The grid has a width and height of <code>0</code> and will not contain any elements.</p>
+<p>The grid has a <a href="../../sector/ListGrid/width.html">width</a> and <a href="../../sector/ListGrid/height.html">height</a> of <code>0</code> and will not contain any
+elements.</p>
 </section>
 
 
