--- a/sector/sector-library-sidebar.html
+++ b/sector/sector-library-sidebar.html
@@ -5,6 +5,7 @@
         <li><a href="sector/GridIterable-class.html">GridIterable</a></li>
         <li><a href="sector/GridIterator-class.html">GridIterator</a></li>
         <li><a href="sector/ListGrid-class.html">ListGrid</a></li>
+        <li><a href="sector/SplayTreeGrid-class.html">SplayTreeGrid</a></li>
         <li><a href="sector/UnmodifiableGridView-class.html">UnmodifiableGridView</a></li>
 
       <li class="section-title"><a href="sector/sector-library.html#enums">Enums</a></li>
@@ -21,6 +22,7 @@
 
       <li class="section-title"><a href="sector/sector-library.html#functions">Functions</a></li>
         <li><a href="sector/drawLine.html">drawLine</a></li>
+        <li><a href="sector/drawRect.html">drawRect</a></li>
         <li><a href="sector/rowMajor.html">rowMajor</a></li>
 
       <li class="section-title"><a href="sector/sector-library.html#typedefs">Typedefs</a></li>
