--- a/sector/GridImpl-extension-sidebar.html
+++ b/sector/GridImpl-extension-sidebar.html
@@ -18,6 +18,8 @@
           <li><a href="sector/GridImpl/checkLength.html">checkLength</a></li>
           <li><a href="sector/GridImpl/checkNotEmpty.html">checkNotEmpty</a></li>
           <li><a href="sector/GridImpl/debugString.html">debugString</a></li>
+          <li><a href="sector/GridImpl/mostCommonElement.html">mostCommonElement</a></li>
           <li><a href="sector/GridImpl/subGridView.html">subGridView</a></li>
+          <li><a href="sector/GridImpl/transpose.html">transpose</a></li>
 
 </ol>
