--- a/sector/SplayTreeGrid/SplayTreeGrid.from.html
+++ b/sector/SplayTreeGrid/SplayTreeGrid.from.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
-  <meta name="description" content="API docs for the ListGrid.from constructor from Class ListGrid from the sector library, for the Dart programming language.">
-  <title>ListGrid.from constructor - ListGrid - sector library - Dart API</title>
+  <meta name="description" content="API docs for the SplayTreeGrid.from constructor from Class SplayTreeGrid from the sector library, for the Dart programming language.">
+  <title>SplayTreeGrid.from constructor - SplayTreeGrid - sector library - Dart API</title>
 
 
   
@@ -30,10 +30,10 @@
   <ol class="breadcrumbs gt-separated dark hidden-xs">
     <li><a href="../../index.html">sector</a></li>
     <li><a href="../../sector/sector-library.html">sector.dart</a></li>
-    <li><a href="../../sector/ListGrid-class.html">ListGrid<span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></a></li>
-    <li class="self-crumb">ListGrid.from factory constructor</li>
+    <li><a href="../../sector/SplayTreeGrid-class.html">SplayTreeGrid<span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></a></li>
+    <li class="self-crumb">SplayTreeGrid.from factory constructor</li>
   </ol>
-  <div class="self-name">ListGrid.from</div>
+  <div class="self-name">SplayTreeGrid.from</div>
   <form class="search navbar-right" role="search">
     <input type="text" id="search-box" autocomplete="off" disabled class="form-control typeahead" placeholder="Loading search...">
   </form>
@@ -54,15 +54,16 @@
   <div
       id="dartdoc-main-content"
       class="main-content"
-      data-above-sidebar="sector&#47;ListGrid-class-sidebar.html"
+      data-above-sidebar="sector&#47;SplayTreeGrid-class-sidebar.html"
       data-below-sidebar="">
       <div>
-<h1><span class="kind-constructor">ListGrid&lt;<wbr><span class="type-parameter">T</span>&gt;.from</span> constructor 
+<h1><span class="kind-constructor">SplayTreeGrid&lt;<wbr><span class="type-parameter">T</span>&gt;.from</span> constructor 
 </h1></div>
 
     <section class="multi-line-signature">
       
-      <span class="name ">ListGrid&lt;<wbr><span class="type-parameter">T</span>&gt;.from</span>(<wbr><ol class="parameter-list"><li><span class="parameter" id="from-param-grid"><span class="type-annotation"><a href="../../sector/Grid-class.html">Grid</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> <span class="parameter-name">grid</span></span></li>
+      <span class="name ">SplayTreeGrid&lt;<wbr><span class="type-parameter">T</span>&gt;.from</span>(<wbr><ol class="parameter-list"><li><span class="parameter" id="from-param-grid"><span class="type-annotation"><a href="../../sector/Grid-class.html">Grid</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> <span class="parameter-name">grid</span>, </span></li>
+<li><span class="parameter" id="from-param-fill">{<span class="type-annotation">T?</span> <span class="parameter-name">fill</span>}</span></li>
 </ol>)
     </section>
 
@@ -70,14 +71,25 @@
 <section class="desc markdown">
   <p>Creates a new grid from an existing <code>grid</code>.</p>
 <p>The new grid is a shallow copy of the original grid.</p>
+<p>When elements are added to the grid with a value of <code>fill</code>, the grid will
+grow to accommodate the new elements, but does not pre-allocate any space;
+if not provided, the most common value is used as the default.</p>
 </section>
 
 
     
 <section class="summary source-code" id="source">
   <h2><span>Implementation</span></h2>
-  <pre class="language-dart"><code class="language-dart">factory ListGrid.from(Grid&lt;T&gt; grid) {
-  return ListGrid.generate(grid.width, grid.height, grid.getUnchecked);
+  <pre class="language-dart"><code class="language-dart">factory SplayTreeGrid.from(
+  Grid&lt;T&gt; grid, {
+  T? fill,
+}) {
+  return SplayTreeGrid.generate(
+    grid.width,
+    grid.height,
+    grid.getUnchecked,
+    fill: fill,
+  );
 }</code></pre>
 </section>
 
@@ -95,12 +107,12 @@
 <ol class="breadcrumbs gt-separated dark hidden-l" id="sidebar-nav">
     <li><a href="../../index.html">sector</a></li>
     <li><a href="../../sector/sector-library.html">sector</a></li>
-    <li><a href="../../sector/ListGrid-class.html">ListGrid<span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></a></li>
-    <li class="self-crumb">ListGrid.from factory constructor</li>
+    <li><a href="../../sector/SplayTreeGrid-class.html">SplayTreeGrid<span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></a></li>
+    <li class="self-crumb">SplayTreeGrid.from factory constructor</li>
 </ol>
 
 
-    <h5>ListGrid class</h5>
+    <h5>SplayTreeGrid class</h5>
     <div id="dartdoc-sidebar-left-content"></div>
   </div><!--/.sidebar-offcanvas-left-->
 
