--- a/sector/sector-library.html
+++ b/sector/sector-library.html
@@ -181,6 +181,14 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
   A dense grid implementation using a 1-dimensional <a href="https://api.dart.dev/stable/3.4.4/dart-core/List-class.html">List</a> to store elements.
 </dd>
 
+          <dt id="SplayTreeGrid">
+  <span class="name "><a href="../sector/SplayTreeGrid-class.html">SplayTreeGrid</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> 
+
+</dt>
+<dd>
+  A sparse grid implementation using a <a href="https://api.dart.dev/stable/3.4.4/dart-collection/SplayTreeMap-class.html">SplayTreeMap</a> to store elements.
+</dd>
+
           <dt id="UnmodifiableGridView">
   <span class="name "><a href="../sector/UnmodifiableGridView-class.html">UnmodifiableGridView</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> 
 
@@ -258,7 +266,7 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
 
 </dt>
 <dd>
-  Additional convenience methods that are derived from the <a href="../sector/Grid-class.html">Grid</a> interface.
+  Additional convenience methods that are derived from <a href="../sector/Grid-class.html">Grid</a>.
 </dd>
 
 
@@ -291,6 +299,19 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
 </dt>
 <dd>
   A traversal that draws a line between two positions.
+  
+
+</dd>
+
+          <dt id="drawRect" class="callable">
+  <span class="name"><a href="../sector/drawRect.html">drawRect</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="drawRect-param-left"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">left</span>, </span><span class="parameter" id="drawRect-param-top"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">top</span>, </span><span class="parameter" id="drawRect-param-width"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">width</span>, </span><span class="parameter" id="drawRect-param-height"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">height</span></span>)
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+  </span>
+  
+
+</dt>
+<dd>
+  A traversal that draws a rectangle between two positions.
   
 
 </dd>
