--- a/sector/sector-library-sidebar.html
+++ b/sector/sector-library-sidebar.html
@@ -23,6 +23,9 @@
       <li class="section-title"><a href="sector/sector-library.html#functions">Functions</a></li>
         <li><a href="sector/drawLine.html">drawLine</a></li>
         <li><a href="sector/drawRect.html">drawRect</a></li>
+        <li><a href="sector/neighbors.html">neighbors</a></li>
+        <li><a href="sector/neighborsDiagonal.html">neighborsDiagonal</a></li>
+        <li><a href="sector/prettyPrint.html">prettyPrint</a></li>
         <li><a href="sector/rowMajor.html">rowMajor</a></li>
 
       <li class="section-title"><a href="sector/sector-library.html#typedefs">Typedefs</a></li>
