--- a/sector/SplayTreeGrid-class.html
+++ b/sector/SplayTreeGrid-class.html
@@ -458,8 +458,8 @@ print(grid.toSparseMap());
 </dd>
 
         <dt id="traverse" class="callable inherited">
-  <span class="name"><a href="../sector/Grid/traverse.html">traverse</a></span><span class="signature">(<wbr><span class="parameter" id="traverse-param-order">[<span class="type-annotation"><a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span>?</span> <span class="parameter-name">order</span>]</span>)
-    <span class="returntype parameter">&#8594; <a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+  <span class="name"><a href="../sector/Grid/traverse.html">traverse</a></span><span class="signature">&lt;<wbr><span class="type-parameter">R</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="traverse-param-order"><span class="type-annotation"><a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">R</span>, <span class="type-parameter">T</span>&gt;</span></span> <span class="parameter-name">order</span></span>)
+    <span class="returntype parameter">&#8594; R</span>
   </span>
   
 
