--- a/sector/drawLine.html
+++ b/sector/drawLine.html
@@ -63,7 +63,7 @@
     <section class="multi-line-signature">
         
 
-<span class="returntype"><a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+<span class="returntype"><a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>, <span class="type-parameter">T</span>&gt;</span></span>
 <span class="name ">drawLine</span>&lt;<wbr><span class="type-parameter">T</span>&gt;(<wbr><ol class="parameter-list"><li><span class="parameter" id="drawLine-param-x1"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x1</span>, </span></li>
 <li><span class="parameter" id="drawLine-param-y1"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y1</span>, </span></li>
 <li><span class="parameter" id="drawLine-param-x2"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x2</span>, </span></li>
@@ -104,7 +104,7 @@ for (final cell in grid.traverse(lineDraw((0, 0), (2, 2)))) {
     
 <section class="summary source-code" id="source">
   <h2><span>Implementation</span></h2>
-  <pre class="language-dart"><code class="language-dart">Traversal&lt;T&gt; drawLine&lt;T&gt;(
+  <pre class="language-dart"><code class="language-dart">Traversal&lt;GridIterable&lt;T&gt;, T&gt; drawLine&lt;T&gt;(
   int x1,
   int y1,
   int x2,
