--- a/sector/sector-library.html
+++ b/sector/sector-library.html
@@ -292,7 +292,7 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
       <dl class="callables">
           <dt id="drawLine" class="callable">
   <span class="name"><a href="../sector/drawLine.html">drawLine</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="drawLine-param-x1"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x1</span>, </span><span class="parameter" id="drawLine-param-y1"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y1</span>, </span><span class="parameter" id="drawLine-param-x2"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x2</span>, </span><span class="parameter" id="drawLine-param-y2"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y2</span>, </span><span class="parameter" id="drawLine-param-inclusive">{<span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span> <span class="parameter-name">inclusive</span> = <span class="default-value">true</span>}</span>)
-    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>, <span class="type-parameter">T</span>&gt;</span></span>
   </span>
   
 
@@ -305,7 +305,7 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
 
           <dt id="drawRect" class="callable">
   <span class="name"><a href="../sector/drawRect.html">drawRect</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="drawRect-param-left"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">left</span>, </span><span class="parameter" id="drawRect-param-top"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">top</span>, </span><span class="parameter" id="drawRect-param-width"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">width</span>, </span><span class="parameter" id="drawRect-param-height"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">height</span></span>)
-    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>, <span class="type-parameter">T</span>&gt;</span></span>
   </span>
   
 
@@ -316,9 +316,48 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
 
 </dd>
 
+          <dt id="neighbors" class="callable">
+  <span class="name"><a href="../sector/neighbors.html">neighbors</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="neighbors-param-x"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x</span>, </span><span class="parameter" id="neighbors-param-y"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y</span>, </span><span class="parameter" id="neighbors-param-ifAbsent">{<span class="type-annotation">T?</span> <span class="parameter-name">ifAbsent</span>, </span><span class="parameter" id="neighbors-param-directions"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/List-class.html">List</a><span class="signature">&lt;<wbr><span class="type-parameter">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)</span>&gt;</span></span> <span class="parameter-name">directions</span> = <span class="default-value">const [(0, -1), (1, 0), (0, 1), (-1, 0)]</span>}</span>)
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T?</span>&gt;</span></span>, <span class="type-parameter">T</span>&gt;</span></span>
+  </span>
+  
+
+</dt>
+<dd>
+  Given a position, returns the neighbors of that position.
+  
+
+</dd>
+
+          <dt id="neighborsDiagonal" class="callable">
+  <span class="name"><a href="../sector/neighborsDiagonal.html">neighborsDiagonal</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="neighborsDiagonal-param-x"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">x</span>, </span><span class="parameter" id="neighborsDiagonal-param-y"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">y</span>, </span><span class="parameter" id="neighborsDiagonal-param-ifAbsent">{<span class="type-annotation">T?</span> <span class="parameter-name">ifAbsent</span>}</span>)
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T?</span>&gt;</span></span>, <span class="type-parameter">T</span>&gt;</span></span>
+  </span>
+  
+
+</dt>
+<dd>
+  Given a position, returns the neighbors of that position.
+  
+
+</dd>
+
+          <dt id="prettyPrint" class="callable">
+  <span class="name"><a href="../sector/prettyPrint.html">prettyPrint</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="prettyPrint-param-format">{<span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/String-class.html">String</a></span> <span class="parameter-name">format</span>(<span class="parameter" id="param-"><span class="type-annotation">T</span></span>)?}</span>)
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="https://api.dart.dev/stable/3.4.4/dart-core/String-class.html">String</a></span>, <span class="type-parameter">T</span>&gt;</span></span>
+  </span>
+  
+
+</dt>
+<dd>
+  Pretty prints the grid and returns it as a string.
+  
+
+</dd>
+
           <dt id="rowMajor" class="callable">
   <span class="name"><a href="../sector/rowMajor.html">rowMajor</a></span><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span><span class="signature">(<wbr><span class="parameter" id="rowMajor-param-start">{<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span> <span class="parameter-name">start</span>}</span>)
-    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+    <span class="returntype parameter">&#8594; <a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter"><a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>, <span class="type-parameter">T</span>&gt;</span></span>
   </span>
   
 
@@ -338,8 +377,8 @@ built-in methods (either from a mixin or <a href="../sector/GridImpl.html">GridI
       <dl>
           
   <dt id="Traversal" class="callable">
-    <span class="name"><a href="../sector/Traversal.html">Traversal</a></span>&lt;<wbr><span class="type-parameter">T</span>&gt;<span class="signature">
-      <span class="returntype parameter">= <a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span> Function<span class="signature">(<span class="parameter" id="param-grid"><span class="type-annotation"><a href="../sector/Grid-class.html">Grid</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> <span class="parameter-name">grid</span></span>)</span></span>
+    <span class="name"><a href="../sector/Traversal.html">Traversal</a></span>&lt;<wbr><span class="type-parameter">R</span>, <span class="type-parameter">T</span>&gt;<span class="signature">
+      <span class="returntype parameter">= R Function<span class="signature">(<span class="parameter" id="param-grid"><span class="type-annotation"><a href="../sector/Grid-class.html">Grid</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span> <span class="parameter-name">grid</span></span>)</span></span>
     </span>
     
 
