deploy: 39fdc507b26bf106632a2a970f9faa958a3938ca

--- a/sector/GridExtension-extension-sidebar.html
+++ b/sector/GridExtension-extension-sidebar.html
@@ -10,6 +10,8 @@
 
         <li class="section-title"><a href="sector/GridExtension.html#instance-methods">Methods</a></li>
           <li><a href="sector/GridExtension/asSubGridClamped.html">asSubGridClamped</a></li>
+          <li><a href="sector/GridExtension/fill.html">fill</a></li>
+          <li><a href="sector/GridExtension/fillWith.html">fillWith</a></li>
           <li><a href="sector/GridExtension/subGridClamped.html">subGridClamped</a></li>
 
 
