--- a/sector/sector-library-sidebar.html
+++ b/sector/sector-library-sidebar.html
@@ -21,8 +21,10 @@
 
 
       <li class="section-title"><a href="sector/sector-library.html#functions">Functions</a></li>
+        <li><a href="sector/breadthFirst.html">breadthFirst</a></li>
         <li><a href="sector/drawLine.html">drawLine</a></li>
         <li><a href="sector/drawRect.html">drawRect</a></li>
+        <li><a href="sector/edges.html">edges</a></li>
         <li><a href="sector/neighbors.html">neighbors</a></li>
         <li><a href="sector/neighborsDiagonal.html">neighborsDiagonal</a></li>
         <li><a href="sector/prettyPrint.html">prettyPrint</a></li>
